kotlin-sdk/3.11/ref/glossary.md
---
title: Glossary
description: Couchbase-specific terms you'll need to understand to develop with the SDK.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-sdk-kotlin/edit/temp/3.11/modules/ref/pages/glossary.adoc
  xref: xref:3.11@kotlin-sdk:ref:glossary.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/kotlin-sdk/3.11/ref/glossary.html)

# Glossary

> Unpicking the tangled alphabet soup of the Couchbase Platform, from an SDK perspective. 

The Couchbase Data platform offers several services, and many advanced features, which we document here, in the Couchbase SDK documentation. Below you will find short definitions of many Couchbase-related terms, with links to the pages that describe them in more detail, or show practical examples of their use.

* [Analytics](#howtos:analytics-using-sdk.adoc) — Couchbase Analytics Service allows longer running queries over big data, whilst taking advantage of Couchbase's Multi-Dimensional scaling.
* [CAS](#howtos:concurrent-document-mutations.adoc) — Conpare And Swap. A value which is altered each time a document is mutated. Used in Concurrent Document Mutations for a type of optimistic locking.
* [Cert Auth](#howtos:sdk-authentication.adoc#certificate-authentication) — Certificate Authentication (Capella and [Enterprise Edition](#8.0.0@server:introduction:editions.adoc) only). A client attempting to access Couchbase Server can present a certificate to the server, allowing the server to check the validity of the certificate. If the certificate is valid, the user under whose identity the client is running, and the roles assigned that user, are verified. If the assigned roles are appropriate for the level of access requested to the specified resource, access is granted.
* [Cluster Provisioning](#howtos:provisioning-cluster-resources.adoc) — The primary means for managing clusters is through the Couchbase Web UI which provides an easy to use interface for adding, removing, monitoring and modifying buckets. In some instances you may wish to have a programmatic interface. For example, if you wish to manage a cluster from a setup script, or if you are setting up buckets in test scaffolding. The SDK also comes with some convenience functionality for common Couchbase management requests.
* [Collections](../concept-docs/collections.md) — from Server 7.0, _Collections_ allow groupings of documents beneath the Bucket level. Bucket items can optionally be assigned to different collections according to content type.
* [Custom Transcoders](#howtos:transcoders-nonjson.adoc) — Whenever key-value data is sent to or retrieved from Couchbase Server, the SDK passes the data being sent to a transcoder. The transcoder can either reject the data as being unsupported, or convert it into a byte array and a Common Flag. Many applications will not need to be aware of transcoders, as the defaults support most standard JSON use cases. More advanced transcoding needs can be accomplished if the application implements their own transcoders and serializers.
* [DCP](#8.0.0@server:learn:clusters-and-availability/intra-cluster-replication.adoc#database-change-protocol) — Database Change Protocol (DCP) is the protocol used to stream bucket-level mutations. DCP is used for high-speed replication of mutations; to maintain replica vBuckets, incremental MapReduce and spatial views, Global Secondary Indexes (GSIs), XDCR, backups, and external connections. This feed is not directly available, and users should look at [other low latency alternatives](../concept-docs/data-services.md#lowest-latency).
* [Diagnostics](#howtos:health-check.adoc) — A diagnostics report just returns whatever current state the client is in. This makes it much cheaper than `ping` to call on a regular basis, but does not provide any live insight into network slowness.
* [Durability](../concept-docs/durability-replication-failure-considerations.md) — Couchbase Server 6.0 and earlier, with 2.x API versions of the SDK, used Observe style durability; this is still available in most versions of SDK 3.x for working with earlier Server releases. All current, supported versions of Couchbase Server offer Server-side [Durable Writes](#8.0.0@server:learn:data/durability.adoc). See also _Transactions_, below.
* Encryption — see _Field Level Encryption_, below.
* Extended Attributes — see _XATTRs_, below.
* [Eventing](#8.0.0@server:learn:services-and-indexes/services/eventing-service.adoc) — The Eventing Service allows functions to be written, saved, and triggered in response to events. Events include changes made to specified items, and the arrival of scheduled points-in-time. There is limited interaction with the Eventing Service from the SDK.
* [Field Level Encryption (FLE)](../concept-docs/encryption.md) — encryption of the field or _value_ in a key-value pair, using a FIPS-140-2 compliant cryptography algorithm.
* [Global Secondary Indexes (GSI)](#8.0.0@server:learn:services-and-indexes/indexes/global-secondary-indexes.adoc) — A Global Secondary Index (GSI) supports queries made by the Query Service on attributes within documents. Secondary indexes — which contain a filtered or a full set of keys in a given bucket — are optional, but increase query efficiency on a bucket. GSIs can be created [through the SDK](../concept-docs/n1ql-query.md#indexes), using the SQL++ (formerly N1QL) `CREATE INDEX` statement. See also [Memory-Optimized Index Storage](#8.0.0@server:learn:services-and-indexes/indexes/storage-modes.adoc#memory-optimized-index-storage) (MOI).
* [Health Check](#howtos:health-check.adoc) — Health Check provides `ping` and `diagnostics` tests for the health of the network and the cluster. See under `ping` and `diagnostics` for more information.
* JSON & non-JSON — Couchbase Services work with JSON documents (see [rfc8259](https://tools.ietf.org/html/rfc8259)), but non-JSON storage is supported, including UTF-8 strings, raw sequences of bytes, and language specific serializations -- see the [Binary Storage Documentation](../concept-docs/nonjson.md). Non-JSON formats may be more efficient in terms of memory and processing power (for example, if storing only flat strings, JSON adds an additional syntactical overhead of two bytes per string). Non-JSON documents may be desirable if migrating a legacy application, which is using a [customized binary format](#howtos:transcoders-nonjson.adoc). JSON's key-value structure allows the storage of collection data structures such as lists, maps, sets and queues — see the [Data Model page](../concept-docs/data-model.md); JSON's tree-like structure allows operations against [specific paths in the Document](#howtos:subdocument-operations.adoc), and efficient support for these data structures.
* [Key-Value Operations](../howtos/kv-operations.md) — KV Operations work directly on the document, for CRUD operations on documents whose identity (key) is known. The Data (KV) Service uses a fast binary protocol, and is often the best choice for optimum performance.
* [MapReduce Views](#howtos:view-queries-with-sdk.adoc) — MapReduce Views uses distributed Map-Reduce for very fast aggregation operations (fast, because the indexes are pre-computed results) — ideal for pre-grouped aggregations, such as grouping temporal data sets (by day, by month, etc.). However, Views are deprecated in the latest versions of Couchbase Server, and will eventually be removed. Continuing improvements to our Query Service makes the latter usually a better choice, particularly as Views does not scale as well as the other services, lacking a global Index node.
* N1QL — see _SQL++_, below.
* [Observability](../concept-docs/response-time-observability.md) — Various capabilities within the SDK provide more insight into their inner workings to help debug performance problems (such as latency spikes or reduced throughput) in production. These cover Request Tracing, Observability Metrics, and Orphaned Response Reporting. See the separate entries on this page for those three individual items.
* [Observability Metrics](#howtos:observability-metrics.adoc) — The SDK collects information which is not tied to an individual request but rather to a collection of them (such as requests per second on a specific socket), or concerning the environment the SDK is running in (including garbage collection timings andCPU usage, amongst others).
* [Orphaned Response Reporting](#howtos:observability-orphan-logger.adoc) — Special reporting capabilities which explicitly collect information about responses which have been abandoned (timed out) at the time when the SDK tries to complete them.
* [Ping](#howtos:health-check.adoc) — Ping provides information about the current state of the connections in the Couchbase cluster, by actively polling for the status of the specified services, giving status and latency information for every node reachable. In addition to its use as a monitoring tool, a regular `ping` can be used in an environment which does not respect keep alive values for a connection.
* [Query](#howtos:n1ql-queries-with-sdk.adoc) — The Couchbase Query Service uses a SQL-like language for powerful queries across documents.
* [RBAC](#8.0.0@server:learn:security/authorization-overview.adoc#introduction-to-rbac) — Role-Based Access Control allows secure, fine-grained access privileges, assigned to fixed roles. The 3.x API allows some user management programmatically from the SDK.
* [Request Tracing](#howtos:observability-tracing.adoc) — The tracing capability allows the SDK to store, aggregate, and potentially forward information about an individual request which can be used for later analysis. Information such as the time it took to encode the request and how much time it spent on the wire.
* [Scope](../concept-docs/collections.md) — from Server 7.0, _Collections_ allow groupings of documents beneath the Bucket level, and _Scopes_ group together Collections. Collections might be assigned to different scopes according to content-type, or to deployment-phase (e.g., test and production). Applications can be assigned per-scope access rights, allowing each application to access only those collections it requires.
* [The Search Service](../howtos/full-text-search.md) — Create, manage, and query search indexes on JSON documents stored in Couchbase buckets. The Search Service uses natural language processing for indexing and querying documents, provides relevance scoring on the results of your queries, and has fast indexes for querying a wide range of possible text searches. Some of the supported query-types include simple queries like Match and Term queries; range queries like Date Range and Numeric Range; and compound queries for conjunctions, disjunctions, and/or boolean queries. Also integrates with Vector Search indexes.
* [SQL++](../concept-docs/n1ql-query.md) — Couchbase's powerful SQL-like language (formerly N1QL) allows queries in a format familiar to Database Administrators. These can be made against our Query Service, for transaction (OLTP) queries, or against our analytics (OLAP) services — CBAS or, for _real-time_ analytics, Capella Columnar.
* [Sub-Document Operations](#howtos:subdocument-operations.adoc) — Sub-Document retrievals only retrieve relevant parts of a document and Sub-Document updates only require sending the updated portions of a document. Sub-Document operations are also atomic, in that if one Sub-Document mutation fails then all will, allowing safe modifications to documents with built-in concurrency control.
* [Transactions](#8.0.0@server:learn:data/transactions.adoc) — Distributed ACID Transactions guarantee that multiple documents can be updated atomically.
* Transcoders — See _Custom Transcoders_, above.
* [Vector Search](#howtos:vector-searching-with-sdk.adoc) — With Couchbase Vector Search, you can enable fast and highly accurate semantic search, ground LLM responses in relevant data to reduce hallucinations, and enhance or enable use cases like personalized searches in e-commerce and media & entertainment, product recommendations, fraud detection, and reverse image search.
* [Virtual XATTRs](../concept-docs/xattr.md#virtual-extended-attributes) — Virtual Extended Attributes (VXATTR) consist of metadata on an individual document, generated on-demand to expose storage-level document metadata, such as `expiry` to expose document expiration.
* [XATTRs](#howtos:subdocument-operations.adoc#extended-attributes) — Extended Attributes (XATTRs), built upon the Sub-Document API, allow developers to define application-specific metadata that will only be visible to those applications that request it or attempt to modify it. This might be, for example, meta-data specific to a programming framework that should be hidden by default from other frameworks or libraries, or possibly from other versions of the same framework. They are not intended for use in general applications, and data stored there cannot be accessed easily by some Couchbase services, such as Search.

## [](#further-reading)Further Reading

Glossaries are available for:

* [Couchbase Server](../../../server/current/learn/glossary.md)
* [Couchbase Eventing Service](../../../server/current/eventing/eventing-Terminologies.md)
* [Couchbase Lite (Android)](../../../couchbase-lite/current/android/refer-glossary.md)
* [Sync Gateway](../../../sync-gateway/current/glossary.md)

Only the Server Glossary takes the form of an index, linking to other pages, in the same manner as this page.